Regular update; respect navigation history of search box in ly.html.

--- a/aboly.html
+++ b/aboly.html
@@ -735,7 +735,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#1.8">1.8</a></div>
 <div class="lybloboriginaltext"><p>子曰：“君子不重则不威，学则不固。主忠信，无友不如己者。过则勿惮改。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">重</span>：庄重，稳重。<span class="lyterm">威</span>：有威严。</p></li>
+<li><p><span class="lyterm">重</span>：庄重，稳重。<a id="wei1"></a><span class="lyterm">威</span>：有威严，令人敬畏。这是上位者应有的气质，但威过了头变得凶恶，就是<a href="#meng3">猛</a>，所以 <a href="#7.38" class="lyref">7.38</a> <a href="#20.2" class="lyref">20.2</a>  都推崇<span class="lyq">威而不猛</span>。</p></li>
 <li><p><a id="gu4"></a><span class="lyterm"><a href="#gu4a">固</a></span>：浅陋狭隘，冥顽不化。<span class="lyexample"><span>【例】</span><span><a href="#7.36" class="lyref">7.36</a> <span class="lyq">奢则不孙，俭则固。</span></span></span></p></li>
 <li><p><a id="zhu3"></a><span class="lyterm">主</span>：注重，崇尚。<span class="lyexample"><span>【例】</span><span><a href="#3.16" class="lyref">3.16</a> <span class="lyq">射不主皮。</span></span></span></p></li>
 <li>
@@ -939,7 +939,7 @@ img.characterimg {
 <li><p><span class="lyterm">耳顺</span>：耳朵顺合于话语，即自然而然就能准确地领会别人话中的含义，另外也有多从积极的方面理解别人的话、兼收并蓄的意思。</p></li>
 <li><p><span class="lyterm">逾矩</span>：超越法度，违规犯法。<a id="yu2d"></a><span class="lyterm">逾</span>：越过，超过。<span class="lyterm">矩</span>：法度，规范，本义为用来画直角的曲尺，又引申为方形。</p></li>
 </ul>
-<p><a id="erlibuhuo"></a>后来，而立、不惑、知命、耳顺就指年龄的30岁、40岁、50岁、60岁。</p>
+<p><a id="erlibuhuo"></a>后来，志学、而立、不惑、知命、耳顺，就用来指年龄的15、30、40、50、60岁。</p>
 </div>
 </div>
 <a id="2.5"></a><div class="lyblob">
@@ -1212,6 +1212,7 @@ img.characterimg {
 <p><a id="shidafu"></a>后世表示身份的称谓中，<span class="lykeyword">卿大夫</span>、<span class="lykeyword">公卿大夫</span>属于高级官员；<span class="lykeyword">士大夫</span>泛指官吏阶层，特别是有公职名望的知识分子；<span class="lykeyword">士人</span>是尚无官位但有一定才誉的读书人（即<a href="#shi4c">士</a>），可看作士大夫的预备队。</p>
 </div>
 </li>
+<li><p><span class="lyterm">庭</span>：庭院，<a href="#tang2">堂</a>阶下的平地。</p></li>
 <li>
 <p><span class="lyterm">忍</span>：可以理解为容受，容忍，主语就是孔子或者天理；或理解为<a href="#ren3">忍心</a>，心硬干得上来，主语是季氏，皆通。成语“是可忍也，孰不可忍”中仅指容忍。</p>
 <p><a id="shu2"></a><span class="lyterm">孰</span>：疑问代词，什么。它的另一个常见义是“谁”。</p>
@@ -1224,22 +1225,22 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>三家者以《雍》彻。子曰：“‘相维辟公，天子穆穆’，奚取于三家之堂？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">三家者以《雍》彻</span>。<span class="lyterm">《雍》</span>见于《诗经·周颂》，是周天子祭祀<a href="#wen">周文王</a>专用的。本章的逻辑承接上一章。<span class="lyterm">彻</span>：通“撤”，指撤去祭品时唱诵。</p>
+<p><span class="lyterm">三家者以《雍》彻</span>。<span class="lyterm">《雍》</span>见于《诗经·周颂》，是周天子祭祀先祖<a href="#wen">文王</a>使用的乐歌。本章承接上一章，也是讲<a href="#jian4a">僭</a>乱之事。<span class="lyterm">彻</span>：通“撤”，指撤去祭品。<span class="lyterm">以《雍》彻</span>就是祭毕撤去祭品时以《雍》乐伴奏。</p>
 <p><span class="lyterm">者</span>：助词，用在（常作主语的）名词之后表示提顿，自身无意义。<span class="lyexample"><span>【例】</span><span>《后汉书·列女传·乐羊子妻》：<span class="lyq">河南乐羊子之妻者，不知何氏之女也。</span></span></span></p>
 <p><a id="jia1"></a><span class="lyterm">家</span>：<a href="#qingdafushi">卿</a>或大夫的<a href="#yi4c">封邑</a>，又称<span class="lykeyword">采（<span class="lypinyin">cài</span>）邑</span>，是从<a href="#tianzi">天子</a>的<a href="#wangji">王畿</a>或<a href="#zhuhou">诸侯</a>的封国中划分的领地，该地百姓的赋税成为受封者的俸禄。扩展而言，当时邦家一体，天子以<a href="#tianxia">天下</a>为家，诸侯以国为家，卿大夫以邑为家。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">有国有家者，不患寡而患不均，不患贫而患不安。</span></span></span><span class="lyseealso"><span>【参】</span><span>《资治通鉴·唐高祖武德九年》（626年）载，唐太宗即位之初，亲自带领侍卫将卒习射，以免<span class="lyq">闲居无事</span>、<span class="lyq">逸游忘战</span>。群臣多有谏阻：“<span class="lyq">万一有狂夫<a href="#qie4a">窃</a>发，出于不意，非所以重<a href="#sheji">社稷</a>也。</span>”太宗<span class="lyq">曰：“王者视<a href="#sihai">四海</a>如一家，封域之内，皆朕赤子，朕一一推心置其腹中，奈何宿卫之士亦加猜忌乎！”由是人思自励，数年之间，悉为精锐。</span>（赤子：婴儿，这里指孩子。赤指体色。）</span></span></p>
-<p><a id="sanhuan"></a><span class="lyterm">三家</span>：指当时把持鲁国政权的三大权贵家族，<a href="#jishi">季孙氏</a>、<a href="#mengshi">孟孙氏</a>、叔孙氏，他们都是鲁国第15任国君鲁桓公（前711年—前694年在位）的后代，又称<span class="lykeyword">三桓</span>。桓公的嫡长子为鲁庄公；庶长子庆父的后代为孟孙氏，庶次子叔牙的后代为叔孙氏，<a id="jiyou"></a>嫡次子季友的后代为季孙氏。季孙氏就是季氏，“孙”不是氏的一部分，仅用于尊称各家宗主，例如<a href="#shusunwushu">叔孙武叔</a>和<a href="#jiziran">季子然</a>的区别。<a id="bozhongshuji"></a><span class="lyseealso"><span>【参】</span><span>古代兄弟姐妹之间的排行，按<span class="lykeyword">伯</span>（或<span class="lykeyword">孟</span>）<span class="lykeyword">仲叔季</span>为序。《左传·隐公元年》孔颖达正义：<span class="lyq">《礼纬》云：“庶长称孟”，然则嫡妻之子长者称伯，妾子长于妻子，则称为孟，所以别<a href="#zongzhu">嫡庶</a>也。</span></span></span></p>
+<p><a id="sanhuan"></a><span class="lyterm">三家</span>：指当时把持鲁国政权的三大权贵家族，<a href="#jishi">季孙氏</a>、<a href="#mengshi">孟孙氏</a>、叔孙氏，他们都是鲁国第15任国君鲁桓公（前711年—前694年在位）的后代，又称<span class="lykeyword">三桓</span>。桓公的嫡长子成为鲁庄公（前693年—前662年在位）；庶长子庆父的后代为孟孙氏，庶次子叔牙的后代为叔孙氏，<a id="jiyou"></a>嫡次子季友的后代为季孙氏。季孙氏就是季氏，“孙”不是氏的一部分，仅用于尊称各家宗主，例如<a href="#shusunwushu">叔孙武叔</a>和<a href="#jiziran">季子然</a>的区别。<a id="bozhongshuji"></a><span class="lyseealso"><span>【参】</span><span>古代兄弟姐妹之间的排行，按<span class="lykeyword">伯</span>（或<span class="lykeyword">孟</span>）<span class="lykeyword">仲叔季</span>为序。《左传·隐公元年》孔颖达正义：<span class="lyq">《礼纬》云：“庶长称孟”，然则嫡妻之子长者称伯，妾子长于妻子，则称为孟，所以别<a href="#zongzhu">嫡庶</a>也。</span></span></span></p>
 <p>鲁庄公临终时，庆父与叔牙勾结企图<a href="#cuan4">篡</a>位为君，被季友力阻，叔牙被赐自尽。贼心不死的庆父在随后3年内连续杀害了2任鲁君：公子般（前662年，在任不足2月）与鲁闵公（前660年），史称<span class="lykeyword">庆父之难</span>。季友再次力挽狂澜，除掉庆父，<a id="luxigong"></a>立鲁僖公（前659年—前627年在位），此后担任正卿16年，季孙氏也壮大成为鲁国第一望族。</p>
 <p>鲁国自第20任的<a href="#xuangong">宣公</a>起，实权一直受三桓把持（其间3年由季氏家臣<a href="#yanghuo">阳货</a>控制），直到第29任的穆公（前415年—前377年在位）才恢复<a href="#gongshi">公室</a>权威，叔孙氏、孟孙氏流亡到齐国，季孙氏据其封邑<a href="#feiyi">费邑</a>独立为费国。</p>
-<p><a id="sifengongshi"></a><span class="lyseealso"><span>【参】</span><span>早在孔子成年以前，三桓已经三分、四分公室，形成对鲁政的垄断。《左传·襄公十一年》（前562年）：<span class="lyq">正月，作<a href="#sanjun">三军</a>，三分公室而〔三桓〕各有其一。<a href="#sanzi">三子</a>各毁其乘。</span>（公室：指鲁国国家<a href="#bingyi">军队</a>，包括相关的<a href="#jingtianzhi">赋税</a>。毁其乘：指撤销私家部队，并入自己统领的一军。）<a id="sifenggongshi"></a>《左传·昭公五年》（前537年）：<span class="lyq">五年春，王正月，舍中军，<a href="#bei1">卑</a>公室也。</span>（王正月：<a href="#lifa">周历</a>正月。）《左传·昭公五年》孔颖达正义：<span class="lyq">襄十一年初作三军，十二分其国民，三家得七，公得五。国民不尽属公，公室已是卑矣。今舍中军，四分公室，三家自取其税，减己税以贡于公，国民不复属于公，公室<a href="#mi2">弥</a>益卑矣。是“舍中军”者，三家所以卑弱公室也。作中军，卑公室之渐；舍中军，卑公室之极。</span>（三分：三军中，季孙全取一军，叔孙取半军，孟孙取1/4军，其余归公室。四分：三军减为两军，季孙全取一军，叔孙、孟孙各取半军，再合拨经费以养公室。）</span></span></p>
+<p><a id="sifengongshi"></a><span class="lyseealso"><span>【参】</span><span>早在孔子成年前，三桓已经三分、四分公室，垄断了鲁政。《左传·襄公十一年》（前562年）：<span class="lyq">正月，作<a href="#sanjun">三军</a>，三分公室而〔三桓〕各有其一。<a href="#sanzi">三子</a>各毁其乘。</span>（公室：指鲁国国家<a href="#bingyi">军队</a>，包括相关的<a href="#jingtianzhi">赋税</a>。毁其乘：指撤销私家部队，并入自己统领的一军。）<a id="sifenggongshi"></a>《左传·昭公五年》（前537年）：<span class="lyq">五年春，王正月，舍中军，<a href="#bei1">卑</a>公室也。</span>（王正月：<a href="#lifa">周历</a>正月。）《左传·昭公五年》孔颖达正义：<span class="lyq">襄十一年初作三军，十二分其国民，三家得七，公得五。国民不尽属公，公室已是卑矣。今舍中军，四分公室，三家自取其税，减己税以贡于公，国民不复属于公，公室<a href="#mi2">弥</a>益卑矣。是“舍中军”者，三家所以卑弱公室也。作中军，卑公室之渐；舍中军，卑公室之极。</span>（三分：三军中，季孙全取一军，叔孙取半军，孟孙取1/4军，其余归公室。四分：三军减为两军，季孙全取一军，叔孙、孟孙各取半军，再合拨经费以养公室。渐：起始。）</span></span></p>
 <p>鲁政的旁落，固然是三桓野心勃勃，从<a href="#shimo">第三者</a>的角度看，也由于鲁国连续几代国君或幼弱或平庸，而三桓人才辈出，政绩斐然，是民心所向。</p>
 </li>
 <li>
-<p><span class="lyterm">相（<span class="lypinyin">xiàng</span>）维辟（<span class="lypinyin">bì</span>）公，<a href="#tianzi">天子</a>穆穆</span>：《雍》中的两句，意思是：在旁助祭的是诸侯，天子仪态肃穆从容。</p>
+<p><span class="lyterm">相（<span class="lypinyin">xiàng</span>）维辟（<span class="lypinyin">bì</span>）公，<a href="#tianzi">天子</a>穆穆</span>：《雍》中的两句，意思是：在旁助祭的是诸侯，天子仪态肃穆从容。其中还有<span class="lyq">燕及皇天</span>这样气魄很大的话（<a href="#yan4a">燕</a>：安），所以孔子会愤慨地问：他们三家哪一点称得起、配得上呢？</p>
 <p><a id="xiang4"></a><span class="lyterm">相</span>：辅助，扶助，特指大臣在国君身旁（或家臣在主人身旁）担任傧相，助行礼仪。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">危而不持，颠而不扶，则将焉用彼相矣？</span></span></span></p>
 <p><span class="lyterm">维</span>：为，是。</p>
 <p><span class="lyterm">辟公</span>：指诸侯。<span class="lyterm">辟</span>：君。<span class="lyexample"><span>【例】</span><span>《诗经·大雅·荡》开头是：<span class="lyq">荡荡上帝，下民之辟。</span>（<a href="#dangdang">荡荡</a>：一语双关，实指骄纵妄为。<a href="#shangdi">上帝</a>：影射<a href="#lixuanyouping">周厉王</a>。）</span></span></p>
 </li>
-<li><p><a id="tang2"></a><span class="lyterm">堂</span>：房屋的正厅，主要用于祭礼、议事、接待等正式活动，不住人；堂后是<a href="#shi4e">室</a>，住人。</p></li>
+<li><p><a id="tang2"></a><span class="lyterm">堂</span>：房屋的正厅，主要用于祭礼、议事、接待等正式活动，不住人；堂后是<a href="#shi4e">室</a>，住人。<span class="lyseealso"><span>【参】</span><span>黄式三《论语后案》：<span class="lyq">上言庭，此言堂，舞乃堂下之乐，歌者在堂上也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="3.3"></a><div class="lyblob">
@@ -2268,7 +2269,7 @@ img.characterimg {
 <li><p><a id="wucheng"></a><span class="lyterm">武城</span>：又称南武城，位于鲁国南部，在今山东省临沂市平邑县。</p></li>
 <li><p><span class="lyterm">得人</span>：指访求到有才德的人作为辅助。<span class="lyseealso"><span>【参】</span><span><a href="#13.2" class="lyref">13.2</a> </span></span></p></li>
 <li><p><a id="jing4"></a><span class="lyterm">径</span>：本义为宽度仅容一人行走的小路，引申指取巧、不正当的门路。成语“行不由径”指为人做事光明磊落，不往邪路上靠。</p></li>
-<li><p><a id="shi4e"></a><span class="lyterm">室</span>：房屋内<a href="#tang2">厅堂</a>之后的部分，相当于现代口语的“里间屋”，既表示关系亲密，也可以有隐秘鬼祟的意味。</p></li>
+<li><p><a id="shi4e"></a><span class="lyterm">室</span>：房屋内<a href="#tang2">厅堂</a>之后的部分，相当于现代口语的“里间屋”。所以既表示关系亲密，也可以有隐秘鬼祟的意味。</p></li>
 </ul></div>
 </div>
 <a id="6.15"></a><div class="lyblob">
@@ -2502,7 +2503,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#7.4">7.4</a></div>
 <div class="lybloboriginaltext"><p>子之燕居，申申如也，夭夭如也。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">燕居</span>：在家闲居，这是相对于在朝堂之上说的。<span class="lyterm">燕</span>：通“宴”，安闲，闲适。<span class="lyexample"><span>【例】</span><span>苏辙《九日家酿未熟》：<span class="lyq">燕居渐忘我，杜门<a href="#xi1">奚</a>不乐？</span>（杜：闭。）</span></span></p></li>
+<li><p><span class="lyterm">燕居</span>：在家闲居，这是相对于在朝堂之上说的。<a id="yan4a"></a><span class="lyterm">燕</span>：通“晏”，安闲，安息。<span class="lyexample"><span>【例】</span><span>苏辙《九日家酿未熟》：<span class="lyq">燕居渐忘我，杜门<a href="#xi1">奚</a>不乐？</span>（杜：闭。）</span></span></p></li>
 <li><p><span class="lyterm">申申</span>和<span class="lyterm">夭夭</span>（<span class="lypinyin">yāo</span>），都是形容舒展和缓的样子。<span class="lyterm">申</span>的甲骨文像闪电舒张，<span class="lyterm">夭</span>的甲骨文像人挥袖起舞。这种象形造字的美感，是字母化表音文字难以传达的。</p></li>
 </ul></div>
 </div>
@@ -2831,7 +2832,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子温而厉，威而不猛，恭而安。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">温</span>：温和。<a id="li4d"></a><span class="lyterm">厉</span>：严肃，其本义为粗磨刀石，是“砺”的本字。</p></li>
-<li><p> 同样是具有力量，<span class="lyterm">威</span>的尊严使人敬仰信服，<span class="lyterm">猛</span>的凶恶使人畏惧远离。<span class="lyseealso"><span>【参】</span><span><a href="#20.2" class="lyref">20.2</a>  孔子有进一步的解释：<span class="lyq">君子正其衣冠，尊其瞻视，俨然人望而<a href="#wei4a">畏</a>之，斯不亦威而不猛乎？</span></span></span></p></li>
+<li><p> 同样是具有力量，“<a href="#wei1">威</a>”的尊严使人敬仰信服，“猛”的凶恶使人畏惧远离。<a id="meng3"></a><span class="lyterm">猛</span>：本义为强壮凶暴的狗。<span class="lyseealso"><span>【参】</span><span><a href="#20.2" class="lyref">20.2</a>  孔子有进一步的解释：<span class="lyq">君子正其衣冠，尊其瞻视，俨然人望而<a href="#wei4a">畏</a>之，斯不亦威而不猛乎？</span></span></span></p></li>
 <li><p><span class="lyterm">恭</span>：恭谨守礼。<span class="lyterm">安</span>：安详不做作。</p></li>
 </ul></div>
 </div>
@@ -2869,8 +2870,8 @@ img.characterimg {
 <p><a id="zhanzhanjingjing"></a><span class="lyterm">战战兢兢（<span class="lypinyin">jīng</span>），如临深渊，如履薄冰</span>：形容小心谨慎的样子。这是《诗经·小雅·小旻》的结尾，紧接在“<a href="#baohupinghe">不敢暴虎</a>”4句之后。</p>
 <p><span class="lyterm">战战</span>：害怕发抖的样子。<span class="lyterm">兢兢</span>：专注谨慎的样子。<span class="lyterm">兢</span>：本义为二人并排竞赛吹奏。成语“战战兢兢”既可以形容害怕发抖，也可以形容小心谨慎。<a id="lv3"></a><span class="lyterm">履</span>：在上面行走，本义为鞋。<span class="lyexample"><span>【例】</span><span>成语“履险如<a href="#yi2">夷</a>”。</span></span></p>
 </li>
-<li><p><span class="lyterm">而今而后</span>：如今以后，今后。<span class="lyexample"><span>【例】</span><span>《宋史·文天祥传》载，南宋丞相文天祥抗元被俘后宁死不降，妻子为他收葬，见<span class="lyq">其衣带中有赞曰：“孔曰成仁，<a href="#mengzi">孟</a>曰取义；惟其义尽，所以<a href="#7.30">仁至</a>。读圣贤书，所学何事！而今而后，<a href="#shu4a">庶几</a>无愧。”</span>（<a id="zan4"></a>赞：明，总结性的话，常为四字一句。）</span></span></p></li>
-<li><p><span class="lyterm">免</span>：指尽量免于疾病，不再让身体受到伤害。这也是对弟子的告诫。<span class="lyseealso"><span>【参】</span><span>《孝经·开宗明义》：<span class="lyq">身体发肤，受之父母，不敢毁伤，孝之始也。立身行道，扬名于后世，以显父母，孝之终也。</span></span></span></p></li>
+<li><p><span class="lyterm">而今而后</span>：如今以后，今后。<span class="lyexample"><span>【例】</span><span>《宋史·文天祥传》载，南宋丞相文天祥抗元被俘后宁死不降，妻子为他收葬，见<span class="lyq">其衣带中有赞曰：“孔曰<a href="#15.9">成仁</a>，<a href="#mengzi">孟</a>曰取义；惟其义尽，所以<a href="#7.30">仁至</a>。读圣贤书，所学何事！而今而后，<a href="#shu4a">庶几</a>无愧。”</span>（<a id="zan4"></a>赞：明，总结性的话，常为四字一句。）</span></span></p></li>
+<li><p><span class="lyterm">免</span>：指尽量免于疾病，不再让身体受到伤害。这也是对弟子的告诫。<span class="lyseealso"><span>【参】</span><span>《孝经·开宗明义》：<span class="lyq">身体发肤，受之父母，不敢毁伤，孝之始也。立身行道，扬名于后世，以显父母，孝之终也。</span>（显：使有荣。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="8.4"></a><div class="lyblob">
@@ -4791,7 +4792,7 @@ img.characterimg {
 <li>
 <p><a id="ju2a"></a><span class="lyterm">谲</span>（<span class="lypinyin">jué</span>）：欺诈，诡诈。现代汉语常常“诡谲”连用。</p>
 <p>孔子评价的晋文公之谲，解释不一。<a id="chengpuzhizhan"></a>一说是指前632年晋国为救援宋国，与楚国进行的城濮（<span class="lypinyin">pú</span>，在今山东省菏泽市鄄（<span class="lypinyin">juàn</span>）城县）之战。当时晋文公先用手段使亲楚的曹、卫两国与楚断交，激怒楚军，然后退兵三舍（<span class="lypinyin">shè</span>，1舍合30里），表示感念楚国的款待旧情。开战后，晋国下军将战马披上虎皮，抢先击破了楚方较弱的右翼——陈、蔡联军；随即上军主动退却，弄得尘土漫天，伪装全军溃败的模样，诱使楚军深入追击；然后中军拦腰斩断，上军从侧面夹攻，击溃了楚军左翼。楚中军主力孤掌难鸣，大败而归，总帅<a href="#lingyin">令尹</a>子玉也引咎自尽。晋国巧计以弱胜强，一战而霸，可能孔子认为有失“堂堂之阵、正正之师”的风范。</p>
-<p><a id="jiantuzhimeng"></a>另一种解释是，年老的晋文公渴望成就霸业，功利心太盛，操之过急。前631年冬，宋国求救于晋，晋人的反应是：<span class="lyq">报施救患，取威定霸，于是乎在矣。</span>次年夏4月击退楚军后，5月晋国就召集齐、宋、鲁、蔡、郑、卫等国，于践土（郑国之地，在今河南省新乡市原阳县）立盟，以晋为伯，共尊周室，同年冬再盟于温（周<a href="#wangji">王畿</a>内的小国，在今河南省焦作市温县），商议讨伐不顺服的国家。这两次盟会，天子周襄王都应邀（受召）前往，实质是为晋文公站台加冕，充当<a href="#3.13">媚于奥</a>的滑稽角色。这在《春秋》、《左传》“僖公二十八年”的记录也很委婉，因为<span class="lyq">以臣召君，不可以训</span>（孔子语。训：作为典范、楷模）。</p>
+<p><a id="jiantuzhimeng"></a>另一种解释是，年老的晋文公渴望成就霸业，功利心太盛，操之过急。前631年冬，宋国求救于晋，晋人的反应是：<span class="lyq">报施救患，取威定霸，于是乎在矣。</span>次年夏4月击退楚军后，5月晋国就召集齐、宋、鲁、蔡、郑、卫等国，于践土（郑国之地，在今河南省新乡市原阳县）立盟，以晋为伯，共尊周室，同年冬再盟于温（周<a href="#wangji">王畿</a>内的小国，在今河南省焦作市温县），商议讨伐不顺服的国家。这两次盟会，天子周襄王都应邀（受召）前往，实质是为晋文公站台加冕，充当<a href="#3.13">媚于奥</a>的门面角色。这在《春秋》、《左传》“僖公二十八年”的记录也很委婉，因为<span class="lyq">以臣召君，不可以训</span>（孔子语；训：作为典范、楷模）。</p>
 <p>城濮之战前，<a href="#qihuangong">齐桓公</a>已死，中原各国群龙无首，饱受强大的楚国欺凌。晋文公长年漂泊，多识世故，<span class="lyq">险阻艰难，备尝之矣；民之<a href="#qing2">情伪</a>，尽知之矣</span>（楚成王语），这与齐桓公的尊崇无忧有天壤之别。他一朝为君，自知日暮途远，晋国固然人才济济，却无管仲那样独力擎天的经世奇才，其谲也是情非得已了。城濮之战后，30多年间楚国不敢北窥中原，晋国的强盛持续到<a href="#sanjiafenjin">六卿内斗</a>时期。</p>
 </li>
 <li><p> 孔子评价的齐桓公之<span class="lyterm">正</span>，应是指下一章的<a href="#jiuhezhuhou">九合诸侯，不以兵车</a>。</p></li>
@@ -6689,6 +6690,7 @@ img.characterimg {
 <p><span class="lybook">《论语今注今译》</span>，毛子水注译，重庆出版社，2009年。原属台湾商务印书馆“古籍今注今译丛书”的一种，1975年出版，1984年作者校订再版，在海外具有广泛持久的影响。它的大部分注释选自合适的古注，辅以按语，另有不少生动活泼的议论，遇到难理解或争议大的就直接写明，读起来既顺畅又踏实。该丛书由上海商务印书馆前总经理（1930—1945）、台湾商务印书馆前董事长（1964—1979）王云五先生主编，共出版约60种。</p>
 <p><span class="lybook">《论语通译》</span>（修订版），徐志刚译注，人民文学出版社，语文新课标必读丛书，2006年。发行量较大，简明清通，但似乎过于简化，疏漏略多。</p>
 <p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔三国魏〕何晏等集解，〔南朝梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。儒家“十三经注疏”之一，汉唐经学的总结，朱熹《四书集注》之前的通行注本。书前“提要”介绍：<span class="lyq">三国时，魏何晏等五人集孔安国、包咸、周氏、马融、郑玄、陈群、王肃和周生烈等对《论语》的解说，择善而从，成《论语集解》。梁皇侃对《集解》进行疏解，成《论语义疏》。宋咸平二年（公元999年），邢昺遵诏改定皇侃《义疏》，其删繁就简，增加对义理的阐述，终成《论语正义》二十卷，又名《论语注疏》。</span>因清儒刘宝楠也有《论语正义》，为清代经学之结晶，故本书多称《论语集解》或《论语注疏》。</p>
+<p><span class="lybook">《论语义疏》</span>，〔南朝梁〕皇侃撰，高尚榘校点，中华书局，中国思想史资料丛刊，2013年。</p>
 <p><span class="lybook">《四书集注》</span>，〔南宋〕朱熹集注，陈戍国标点，岳麓书社，2004年。</p>
 <p><span class="lybook">《诸子集成（第一册）：论语正义·孟子正义》</span>，〔清〕刘宝楠、刘恭冕、焦循撰，北京燕山出版社，2008年。</p>
 <p><a id="lunyujishi"></a><span class="lybook">《论语集释》</span>，程树德撰，中华书局，中华国学文库，2013年。本书可称《论语》注解大全，分类集成了从汉至清各家学者的研究心得，引书680种，并加按语，方便后人系统了解各种诠释与引申，至可感佩。或有讥为取舍不尽精当，敢问更精者何在？其《自序》称：<span class="lyq">夫文化者国家之生命，思想者人民之倾向，教育者立国之根本，凡爱其国者，未有不爱其国之文化。</span>可与钱穆先生《国史大纲》开篇的“凡读本书请先具下列诸信念”对读。</p>
@@ -6711,8 +6713,8 @@ img.characterimg {
 <p><span class="lybook">《史记》</span>，〔西汉〕司马迁撰，〔南朝宋〕裴骃集解，〔唐〕司马贞索隐，〔唐〕张守节正义，中华书局，中华国学文库，2011年。通称“三家注”本，是宋代以来古注的标准版本。</p>
 <p><span class="lybook">《史记笺证》</span>（修订版），韩兆琦编著，江西人民出版社，2009年。</p>
 <p><span class="lybook">《汉书》</span>，〔东汉〕班固撰，〔唐〕颜师古注，中华书局，2000年。</p>
+<p><span class="lybook">《三国志》</span>，〔西晋〕陈寿撰，〔南朝宋〕裴松之注，中华书局，中华国学文库，2011年。</p>
 <p><span class="lybook">《后汉书》</span>，〔南朝宋〕范晔撰，〔唐〕李贤等注，中华书局，2000年。</p>
-<p><span class="lybook">《三国志》</span>，〔西晋〕陈寿撰，〔南朝宋〕裴松之注，中华书局，2005年。</p>
 <p><span class="lybook">《四书五经》</span>，陈戍国点校，岳麓书社，2003年。白文版，11合1（含春秋三传），使用方便。</p>
 <p><span class="lybook">《春秋左传正义》</span>，〔西晋〕杜预注，〔唐〕孔颖达正义，北京大学出版社，十三经注疏丛书，1999年。</p>
 <p><span class="lybook">《左传译注》</span>，李梦生撰，上海古籍出版社，中华古籍译注丛书，1998年。</p>
@@ -6742,10 +6744,10 @@ img.characterimg {
 <p><a id="laozizhuyi"></a><span class="lybook">《老子注译》</span>，高亨著，华钟彦校，河南人民出版社，1980年。《老子》版本繁多，文字、断句屡有分歧，难辨原委，本书引文均据此本。</p>
 <p><span class="lybook">《庄子》</span>，方勇译注，中华书局，中华经典名著全本全注全译丛书，2010年。</p>
 <p><span class="lybook">《管子通解》</span>，赵守正撰，北京经济学院出版社，1989年。</p>
-<p><span class="lybook">《吕氏春秋·淮南子》</span>，杨坚点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p><span class="lybook">《商君书·韩非子》</span>，张觉点校，岳麓书社，古典名著普及文库，2006年。附录含《申子》、《慎子》。</p>
-<p><span class="lybook">《韩非子校注》</span>，张觉校注，岳麓书社，古典名著标准读本，2006年。</p>
+<p><span class="lybook">《吕氏春秋·淮南子》</span>，杨坚点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p><span class="lybook">《韩非子校注》</span>（修订本），《韩非子》校注组编写，周勋初修订，凤凰出版社，2009年。</p>
+<p><span class="lybook">《韩非子校注》</span>，张觉校注，岳麓书社，古典名著标准读本，2006年。</p>
 <p><span class="lybook">《说苑译注》</span>，〔西汉〕刘向撰，程翔译注，北京大学出版社，2009年。</p>
 <p><span class="lybook">《帝王世纪·世本·逸周书·古本竹书纪年》</span>，陆吉等校点，齐鲁书社，2010年。</p>
 <p><span class="lybook">《逸周书校补注译》</span>（修订本），黄怀信著，三秦出版社，2006年。</p>
